COMP_MATH/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: comp-math-ingress
  namespace: comp-math
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-issuer

    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - comp-math.arhr.tech
    secretName: comp-math-tls-secret
    
  rules:
  - host: comp-math.arhr.tech
    http:
      paths:
      - path: /lab2
        pathType: Prefix
        backend:
          service:
            name: lab2-frontend-service
            port:
              number: 80
      - path: /lab2/api
        pathType: Prefix
        backend:
          service:
            name: lab2-backend-service
            port:
              number: 80
      - path: /lab3
        pathType: Prefix
        backend:
          service:
            name: lab3-frontend-service
            port:
              number: 80
      - path: /lab3/api
        pathType: Prefix
        backend:
          service:
            name: lab3-backend-service
            port:
              number: 80
      - path: /lab4
        pathType: Prefix
        backend:
          service:
            name: lab4-frontend-service
            port:
              number: 80
      - path: /lab4/api
        pathType: Prefix
        backend:
          service:
            name: lab4-backend-service
            port:
              number: 80
      - path: /lab5
        pathType: Prefix
        backend:
          service:
            name: lab5-frontend-service
            port:
              number: 80
      - path: /lab5/api
        pathType: Prefix
        backend:
          service:
            name: lab5-backend-service
            port:
              number: 80
      - path: /lab6
        pathType: Prefix
        backend:
          service:
            name: lab6-frontend-service
            port:
              number: 80
      - path: /lab6/api
        pathType: Prefix
        backend:
          service:
            name: lab6-backend-service
            port:
              number: 80
